--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "landing page",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss index.css -w"
+    "start": "node-sass sass/main.scss index.css -w"
   },
   "author": "vara prasad",
   "license": "ISC",
